[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco Acierno", email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "starlette>=0.23.1",
    "uvicorn>=0.20.0",
    "PyGithub>=1.57",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "pdm run uvicorn main:app --port 5959 --reload"
